Linking Mod Shortcat files

--- a/example/index.html
+++ b/example/index.html
@@ -4,10 +4,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="imagetoolbar" content="no" />
 	<title>FancyBox</title>
-	<link rel="stylesheet" type="text/css" href="../jquery.fancybox/jquery.fancybox.css" media="screen" />
-	<script type="text/javascript" src="../jquery.fancybox/jquery-1.3.2.min.js"></script>
-	<script type="text/javascript" src="../jquery.fancybox/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="../jquery.fancybox/jquery.fancybox-1.2.1.pack.js"></script>
+	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.mod_shortcat/jquery.fancybox.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.mod_shortcat/jquery.fancybox.mod_shortcat.css" media="screen" />	
+	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery-1.3.2.min.js"></script>
+	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.fancybox-1.2.1.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("a").fancybox();
