--- a/example/index.html
+++ b/example/index.html
@@ -4,14 +4,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="imagetoolbar" content="no" />
 	<title>FancyBox</title>
-	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.mod_shortcat/jquery.fancybox.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.mod_shortcat/jquery.fancybox.mod_shortcat.css" media="screen" />	
-	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery-1.3.2.min.js"></script>
-	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.fancybox-1.2.1.js"></script>
+	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.css" media="screen" />
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.easing-1.3.pack.js"></script>
+	<script type="text/javascript" src="../jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
-			$("a").fancybox();
+			$("a").fancybox({
+				'speedIn'		:	600, 
+				'speedOut'		:	200
+			});
 		});
 	</script>
 	<style>
