--- a/example/index.html
+++ b/example/index.html
@@ -11,8 +11,11 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("a").fancybox({
-				'speedIn'		:	600, 
-				'speedOut'		:	200
+				'padding'		 :	0,
+				'overlayOpacity' :  0.8,
+				'overlayColor'   : '#333',
+				'hideOnOverlayClick' : false,
+				'centerOnScroll' : true
 			});
 		});
 	</script>
@@ -56,6 +59,8 @@
 		<a rel="group" title="Group title #2" href="3_b.jpg"><img src="3_s.jpg" /></a>
 		<a rel="group" href="4_b.jpg"><img src="4_s.jpg" /></a>
 	</p>
+	
+
 </div>
 </body>
 </html>
