--- a/example/index.html
+++ b/example/index.html
@@ -55,7 +55,7 @@
 	<p>
 		Image group <br />
 	
-		<a rel="group" title="Group title #1" href="2_b.jpg"><img src="2_s.jpg" /></a>
+		<a rel="group" title="Firefox 3.6  offers support for new and developing web standards, increased performance, and an overall better experience for web users and developers. This page provides links to articles covering the new capabilities of Firefox 3.6." href="2_b.jpg"><img src="2_s.jpg" /></a>
 		<a rel="group" title="Group title #2" href="3_b.jpg"><img src="3_s.jpg" /></a>
 		<a rel="group" href="4_b.jpg"><img src="4_s.jpg" /></a>
 	</p>
