--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 			*/
 
 			$("a#example1").fancybox({
-				'titleShow'		: false
+				'padding'		 :	0,
+				'overlayOpacity' :  0.8,
+				'overlayColor'   : '#333',
+				'hideOnOverlayClick' : false,
+				'centerOnScroll' : true
 			});
 
 			$("a#example2").fancybox({
@@ -42,9 +46,11 @@
 			});
 
 			$("a[rel=example_group]").fancybox({
-				'transitionIn'		: 'none',
-				'transitionOut'		: 'none',
-				'titlePosition' 	: 'over',
+				'padding'		 :	0,
+				'overlayOpacity' :  0.8,
+				'overlayColor'   : '#333',
+				'hideOnOverlayClick' : false,
+				'centerOnScroll' : true,
 				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
 					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
 				}
