'Outer' title is positioned in left top corner

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<p>
 		Different animations - 'fade', 'elastic' and 'none'<br />
 
-		<a id="example1" href="./example/1_b.jpg"><img alt="example1" src="./example/1_s.jpg" /></a>
+		<a id="example1" href="./example/1_b.jpg"><img alt="Firefox 3.6  offers support for new and developing web standards, increased performance, and an overall better experience for web users and developers. This page provides links to articles covering the new capabilities of Firefox 3.6." src="./example/1_s.jpg" /></a>
 
 		<a id="example2" href="./example/2_b.jpg"><img alt="example2" src="./example/2_s.jpg" /></a>
 
