--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 				'overlayOpacity' :  0.8,
 				'overlayColor'   : '#333',
 				'hideOnOverlayClick' : false,
-				'centerOnScroll' : true
+				'centerOnScroll' : true,
+				'onStart': function() { $("body").addClass('fancybox-active') },
+				'onClosed': function() { $("body").removeClass('fancybox-active') }
 			});
-
 			$("a#example2").fancybox({
 				'titleShow'		: false,
 				'transitionIn'	: 'elastic',
@@ -53,7 +54,9 @@
 				'centerOnScroll' : true,
 				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
 					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
-				}
+				},
+				'onStart': function() { $("body").addClass('fancybox-active') },
+				'onClosed': function() { $("body").removeClass('fancybox-active') }
 			});
 
 			/*
@@ -63,7 +66,9 @@
 			$("#various1").fancybox({
 				'titlePosition'		: 'inside',
 				'transitionIn'		: 'none',
-				'transitionOut'		: 'none'
+				'transitionOut'		: 'none',
+				'width'			: 1000,
+				'autoDimensions' : false
 			});
 
 			$("#various2").fancybox();
