--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 	<script type="text/javascript" src="./jquery.fancybox.mod_shortcat/jquery.mousewheel-3.0.2.pack.js"></script>
 	<script type="text/javascript" src="./jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.js"></script>
-	<link rel="stylesheet" type="text/css" href="./jquery.fancybox.mod_shortcat/jquery.fancybox-1.3.1.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="./jquery.fancybox.mod_shortcat/jquery.fancybox.mod_shortcat.css" media="screen" />
  	<link rel="stylesheet" href="style.css" />
 	<script type="text/javascript">
 		$(document).ready(function() {
